Issue #3480375 by oways23, alshami: Fix Blocks Filter Not Showing Placeholder in Off-Canvas or Layout Builder Modal

--- a/scss/theme/vlb-enhancements.base.scss
+++ b/scss/theme/vlb-enhancements.base.scss
@@ -310,6 +310,10 @@ form.media-form {
     background-color: #fff !important;
     color: #000 !important;
 
+    &::placeholder {
+      color: #686868 !important;
+    }
+
     &:focus {
       background-color: #fff !important;
       color: #000 !important;
